--- a/.drone.yml
+++ b/.drone.yml
@@ -4414,9 +4414,21 @@ steps:
     volumes:
       - name: rpmrepo
         path: /rpmrepo
+    environment:
+      GNUPGHOME: /tmpfs/gnupg
+      GPG_RPM_SIGNING_ARCHIVE:
+        from_secret: GPG_RPM_SIGNING_ARCHIVE
     commands:
-    - yum -y install createrepo
-    - createrepo --cachedir /rpmrepo/teleport/cache --update /rpmrepo/teleport
+      - yum -y install createrepo
+      - createrepo --cachedir /rpmrepo/teleport/cache --update /rpmrepo/teleport
+      - |
+        # extract signing key
+        mkdir -m0700 $GNUPGHOME
+        echo "$GPG_RPM_SIGNING_ARCHIVE" | base64 -d | tar -xzf - -C $GNUPGHOME
+        chown -R root:root $GNUPGHOME
+      # Sign rpm repo metadata (yum clients will automatically look for and verify repodata/repomd.xml.asc)
+      - gpg --detach-sign --armor /rpmrepo/teleport/repodata/repomd.xml
+      - rm -rf $GNUPGHOME
 
   - name: Sync RPM repo changes to S3
     image: amazon/aws-cli
@@ -4543,6 +4555,6 @@ volumes:
       name: drone-s3-debrepo-pvc
 ---
 kind: signature
-hmac: 28314d2ef716fd998f2d888cf53b403e3aa7139833d30481e7c28678f10975c3
+hmac: 5cbd8dc9a971e8e25e9f23484b12d47f10992ab76e2a844d384d0ff192319bd4
 
 ...
