--- a/.github/workflows/check.yaml
+++ b/.github/workflows/check.yaml
@@ -42,4 +42,4 @@ jobs:
         uses: actions/setup-go@v2
         # Run "check" subcommand on bot.
       - name: Checking reviewers
-        run: cd .github/workflows/robot && go run main.go -workflow=check -token=${{ secrets.GITHUB_TOKEN }} -reviewers="${{ secrets.REVIEWERS }}
+        run: cd .github/workflows/robot && go run main.go -workflow=check -token="${{ secrets.GITHUB_TOKEN }}" -reviewers="${{ secrets.reviewers }}"
